Alhamdulillah 2nd bug fixed: of dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   max-width: 2150px;
   text-align: left;
   background: white;
+  color: black;
 }
 .h60{
   height: 60px;
